force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Shipment Failure</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Delivery Status</fullName>
            </value>
            <value>
                <fullName>Ecom Status</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Exhibition Movement</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>New Enquiry</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Pickup Status</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Service Update</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
                <isActive>false</isActive>
                <label>Feature Request</label>
            </value>
            <value>
                <fullName>KYC API Failed</fullName>
                <isActive>false</isActive>
                <label>KYC API Failed</label>
            </value>
            <value>
                <fullName>KYC Not Verified</fullName>
                <isActive>false</isActive>
                <label>KYC Not Verified</label>
            </value>
            <value>
                <fullName>Problem</fullName>
                <isActive>false</isActive>
                <label>Problem</label>
            </value>
            <value>
                <fullName>Question</fullName>
                <isActive>false</isActive>
                <label>Question</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>