force-app/main/default/objects/Case/fields/Domestic_Shipment_number__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Shipment_number__c</fullName>
    <label>Domestic Shipment number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>