force-app/main/default/objects/Case/fields/First_Escalation__c.field-meta.xml
<CustomField>
    <fullName>First_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Escalation</label>
    <type>Checkbox</type>
</CustomField>