force-app/main/default/objects/Case/fields/Is_Milestone_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Is_Milestone_Achieved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Milestone Achieved</label>
    <type>Checkbox</type>
</CustomField>