force-app/main/default/objects/Case/fields/Manual_Ticket_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Ticket_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Ticket Assignment</label>
    <type>Checkbox</type>
</CustomField>