force-app/main/default/objects/Case/fields/Other_Shipment_number__c.field-meta.xml
<CustomField>
    <fullName>Other_Shipment_number__c</fullName>
    <label>Other Shipment number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>