force-app/main/default/objects/Case/fields/PrimaryServiceOwner__c.field-meta.xml
<CustomField>
    <fullName>PrimaryServiceOwner__c</fullName>
    <formula>Account.Primary_Service_Owner__r.FirstName +&apos; &apos;+ Account.Primary_Service_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrimaryServiceOwner</label>
    <type>Text</type>
</CustomField>