force-app/main/default/objects/Case/fields/rsplus__Business_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>rsplus__Business_Unit_Number__c</fullName>
    <label>Business Unit Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>