force-app/main/default/objects/Case/fields/rsplus__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>rsplus__Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>