force-app/main/default/objects/Case/fields/rsplus__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>rsplus__Phone_Number__c</fullName>
    <label>Customer Mobile Number</label>
    <type>Phone</type>
</CustomField>