force-app/main/default/objects/Case/fields/Second_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Second_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Escalation</label>
    <type>Checkbox</type>
</CustomField>