force-app/main/default/objects/Case/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Service Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>