force-app/main/default/objects/Case/fields/SecondaryServiceOwner__c.field-meta.xml
<CustomField>
    <fullName>SecondaryServiceOwner__c</fullName>
    <formula>Account.Secondary_Service_Owner__r.FirstName +&apos; &apos;+ Account.Secondary_Service_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SecondaryServiceOwner</label>
    <type>Text</type>
</CustomField>