force-app/main/default/objects/Case/fields/Time_taken__c.field-meta.xml
<CustomField>
    <fullName>Time_taken__c</fullName>
    <formula>TEXT(ROUND(MOD((ClosedDate-CreatedDate)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp;

TEXT(ROUND(MOD((ClosedDate-CreatedDate)*1440,60),0)) &amp;&quot; Minute(s) &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time taken</label>
    <type>Text</type>
</CustomField>