force-app/main/default/objects/Case/fields/wk_exo__Lead__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exotel: Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>