force-app/main/default/objects/Case/recordTypes/Domestic_Tickets.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Tickets</fullName>
    <active>true</active>
    <businessProcess>Domestic Tickets</businessProcess>
    <label>Domestic Tickets</label>
</RecordType>