force-app/main/default/objects/Case/recordTypes/International_Tickets_Mumbai.recordType-meta.xml
<RecordType>
    <fullName>International_Tickets_Mumbai</fullName>
    <active>true</active>
    <businessProcess>International Tickets Mumbai</businessProcess>
    <label>International Tickets Mumbai</label>
</RecordType>