force-app/main/default/objects/Case/recordTypes/International_Tickets_Seepz.recordType-meta.xml
<RecordType>
    <fullName>International_Tickets_Seepz</fullName>
    <active>true</active>
    <businessProcess>International Tickets Seepz</businessProcess>
    <label>International Tickets Seepz</label>
</RecordType>