force-app/main/default/objects/Case/recordTypes/International_Tickets_Surat.recordType-meta.xml
<RecordType>
    <fullName>International_Tickets_Surat</fullName>
    <active>true</active>
    <businessProcess>International Tickets Surat</businessProcess>
    <label>International Tickets Surat</label>
</RecordType>