force-app/main/default/objects/Case/listViews/AlI_International_SEEPZ_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>AlI_International_SEEPZ_Open_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Case_Reason__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.International_Tickets_Seepz</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open</value>
    </filters>
    <label>AlI International SEEPZ Open Tickets</label>
</ListView>