force-app/main/default/objects/Case/listViews/All_Domestic_Closed_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Domestic_Closed_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Case_Reason__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Domestic_Tickets</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Domestic Closed Tickets</label>
</ListView>