force-app/main/default/objects/Case/listViews/All_International_Tickets.listView-meta.xml
<ListView>
    <fullName>All_International_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.International_Tickets_Mumbai,Case.International_Tickets_Seepz,Case.International_Tickets_Surat</value>
    </filters>
    <label>All International Tickets</label>
</ListView>