force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open</value>
    </filters>
    <label>All Open Tickets</label>
</ListView>