force-app/main/default/objects/Case/listViews/Bhavik_filtered_view.listView-meta.xml
<ListView>
    <fullName>Bhavik_filtered_view</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>equals</operation>
        <value>bhavik.chinai@bvcventures.com</value>
    </filters>
    <label>Bhavik filtered view</label>
</ListView>