force-app/main/default/objects/Case/listViews/Clone_of_All_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Clone_of_All_Open_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Case_Reason__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>All Tickets</label>
</ListView>