force-app/main/default/objects/Case/listViews/COP_User_Queue_Case.listView-meta.xml
<ListView>
    <fullName>COP_User_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>COP User Queue</label>
    <queue>COP_User_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>