force-app/main/default/objects/Case/listViews/Copy_of_My_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Open_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Closed Tickets</label>
</ListView>